2-applications/kong/unique.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: unique
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: http-app
      hostname: unique.ingress.pcai0201.fr2.hpecolo.net
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-api
      hostname: api.ingress.pcai0201.fr2.hpecolo.net
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
